Move name resolution config to `/usr/lib/systemd/resolved.conf.d`

--- a/example/linux/01-candy.conf
+++ b/example/linux/01-candy.conf
@@ -1,4 +1,4 @@
-# Copy this file to /etc/systemd/resolved.conf.d/01-candy-test.conf
+# Copy this file to /usr/lib/systemd/resolved.conf.d/01-candy-test.conf
 # Ref: https://www.freedesktop.org/software/systemd/man/resolved.conf.html
 [Resolve]
 DNS=127.0.0.1:25353
