--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,6 +45,6 @@ jobs:
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
-      - name: golangci-lint
-        run:
-          make vet
+      - uses: golangci/golangci-lint-action@v3
+        with:
+          args: --timeout 180s
