--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os  }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
+        os: [macos-13, ubuntu-latest]
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
@@ -23,7 +23,7 @@ jobs:
     runs-on: ${{ matrix.os  }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
+        os: [macos-13, ubuntu-latest]
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
@@ -33,7 +33,7 @@ jobs:
           go-version-file: go.mod
           check-latest: true
       - name: Install certutil on macos
-        if: ${{ matrix.os == 'macos-latest' }}
+        if: ${{ matrix.os == 'macos-13' }}
         run: |
           brew install nss
       - name: Test
@@ -43,7 +43,7 @@ jobs:
     runs-on: ${{ matrix.os  }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
+        os: [macos-13, ubuntu-latest]
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
