--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,18 +1,31 @@
 name: Release
 on:
+  workflow_call:
+  workflow_dispatch:
   push:
     tags: 'v*'
 jobs:
-  homebrew:
-    name: Bump Homebrew formula
+  goreleaser:
+    name: GoReleaser
     runs-on: ubuntu-latest
     steps:
-      - uses: mislav/bump-homebrew-formula-action@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v4
         with:
-          formula-name: candy
-          homebrew-tap: owenthereal/homebrew-candy
-          base-branch: master
-          commit-message: |
-            {{formulaName}} {{version}}
+          go-version-file: go.mod
+          check-latest: true
+      - name: Generate tag name
+        run: |
+          # tag > commit
+          echo "build_version=$(git describe --tags --exact-match 2> /dev/null || git rev-parse --short HEAD)" >> "$GITHUB_ENV"
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v4
+        with:
+          version: v1.21.2
+          args: release --clean
         env:
-          COMMITTER_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          CI_GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GORELEASER_CURRENT_TAG: ${{ env.build_version }}
