Use the right GH_TOKEN

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -31,7 +31,7 @@ brews:
   - repository:
       owner: owenthereal
       name: homebrew-candy
-      token: "{{ .Env.GITHUB_TOKEN }}"
+      token: "{{ .Env.CI_GITHUB_TOKEN }}"
     commit_author:
       name: Owen Ou
       email: o@owenout.com
