--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Install certutil on macos
         if: ${{ matrix.os == 'macos-latest' }}
         run: |
-          brew install nss
+          brew install certutil
       - name: Test
         run: make test
   vet:
