Revert "Depends on certutil"
This reverts commit fb63a11302b784f3499da66ea7ea8993810088bd.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Install certutil on macos
         if: ${{ matrix.os == 'macos-latest' }}
         run: |
-          brew install certutil
+          brew install nss
       - name: Test
         run: make test
   vet:
