--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -40,7 +40,7 @@ brews:
     folder: Formula
     license: "Apache 2.0"
     dependencies:
-      - certutil
+      - nss
     custom_block: |
       head "https://github.com/owenthereal/candy.git"
     install: |
