--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os  }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
+        os: [macos-13, ubuntu-latest]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
@@ -21,7 +21,7 @@ jobs:
     runs-on: ${{ matrix.os  }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
+        os: [macos-13, ubuntu-latest]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
@@ -29,7 +29,7 @@ jobs:
           go-version-file: go.mod
           check-latest: true
       - name: Install certutil on macos
-        if: ${{ matrix.os == 'macos-latest' }}
+        if: ${{ matrix.os == 'macos-13' }}
         run: |
           brew install nss
       - name: Test
@@ -39,7 +39,7 @@ jobs:
     runs-on: ${{ matrix.os  }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
+        os: [macos-13, ubuntu-latest]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
