Add example to release

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,6 +17,7 @@ archives:
     files:
       - LICENSE*
       - README*
+      - example/*
 checksum:
   name_template: "checksums.txt"
 snapshot:
